 * Fix laser sight not working properly when it starts out of map bounds
 * Fix parachute making hog stuck or fast when bumping into wall while looking other way
 * Add missing winner animation in single missions
 * Fix hog floating when switching to moving hog
 * Fix jump key not being ignored after placing girder or target
 * Explode hog instantly when taking damage while dying

Styles and schemes:
 + The Specialists: Unlock game scheme
 + The Specialists: Add script parameter support to set custom specialists order
 + Control, CTF_Blizzard: Display scores in stats screen
 + CTF_Blizzard: Various minor graphical and text improvements
 + Frenzy: Change ammo slots
 + Continental supplies: Show continent in team bars
 * Balanced Random Weapon: Fix Lua errors after using Time Box
 * Racer: Fix racer ghost not getting reset after a skip
 * Space Invasion: No longer allow to set start shield above shield limit
 * Battalion, WxW: Crates drop between turns, when appropriate
 * Battalion: Sudden Death effects are now like in the base game
 * King Mode: Fix team sometimes not being killed properly if king drowned
 * King Mode: Kill resurrected minions if king is not alive
 * HedgeEditor: Fix major FPS drop when there are a lot of objects
 * Control: Fix score failure after using extra time
 * Frenzy: Fix incorrect ammo slot numbers in ammo menu
 * Continental supplies: Computer teams now select random continent
 * WxW, Racer: Computer teams no longer block setup phase

A Classic Fairytale:
 + Backstab: Disable utilities before traitor has been dealt with
 * Backstab: Prevent attacking the cannibals before making the choice
 * Backstab: Fix/tweak behaviour in 3rd enemy wave
 * First blood: Fix Lua error when hitting Attack after failing the rope challenge
 * First blood: Fix a cut scene being played twice in row
 * The Shadow Falls: Fix Lua error when hog dies during choice phase